syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

option go_package = "proto/proto";

message AcknowledgementMessage {
    int64 id = 1;
    string state = 2;
}

message BidMessage {
    int64 id = 1;
    int64 bidAmount = 2;
}

message ResultMessage {
    int64 id = 1;
    int64 resultAmount = 2;
}

service Database {
    rpc AskForBid(BidMessage) returns (AcknowledgementMessage);
    rpc AskForResult(google.protobuf.Empty) returns (ResultMessage);
}